天融信vpn提示错误，需要手动更新最新版客户端

--- a/入职/培训计划/基础知识/通用软件.md
+++ b/入职/培训计划/基础知识/通用软件.md
@@ -21,9 +21,10 @@
 
 #### 2.1.2. 配置
 
-- 网关地址：<https://210.12.131.84:20443>；
+- 网关地址：210.12.131.84:20443；
 - 用户名：中文全名；
 - 密码；
+- 若以上配置正确，仍提示错误，需要手动更新最新版客户端；
 
 #### 2.1.3. 使用
 
