增加办公软件说明

--- a/入职/培训计划/基础知识/通用软件.md
+++ b/入职/培训计划/基础知识/通用软件.md
@@ -11,25 +11,68 @@
 | [seaTable](http://192.168.10.51:8090/) | 周报                 | 由**陈灿**创建   | 由项目管理者进行授权 | [操作说明文档](https://docs.seatable.cn/published/seatable-user-manual/home.md)                                              |
 | [公司软件地址](smb://10.10.3.2)        | office、打印机驱动等 | 由**刘志飞**创建 | 由项目管理者进行授权 | guest账号登录即可，无需填写密码；建议安装office2016，project2016，visio2016；                                                |
 
-## 2. vpn软件
+## 2. 办公软件
 
-### 2.1. 天融信VPN
+### 2.1. OA办公系统客户端
 
 #### 2.1.1. 安装
 
-- [官网地址](https://app.topsec.com.cn/ng.html)；
+1. 登录OA系统后，界面右上角的M图标为移动版OA软件，e图标为桌面版OA软件；
+2. 根据界面提示，下载所需版本；
 
 #### 2.1.2. 配置
+
+- 系统地址：<http://oa100.bhz.com.cn:89>；
+- 移动版，可能需要进行隐私授权；
+
+#### 2.1.3. 使用
+
+- 使用OA办公系统相同的账号密码登录即可；
+
+### 2.2. 蓝信
+
+#### 2.2.1. 安装
+
+- [官网地址](https://service.lanxin.cn/service/download/)；
+
+> PS
+
+- 由于蓝信公司为CEC集团旗下公司，使用手机号登录移动版蓝信app时，将识别为是否为CEC集团员工；
+- 若为CEC集团员工，则需要下载集团员工专用版本蓝信app；
+
+>> PPS
+
+- 鉴于ios系统的审核机制，若安装专用版本蓝信app时，需要先安装TestFlight软件；
+- 在登录app store版本蓝信时，会弹出提示窗口，要求下载专用版本；
+- 若提示需要信任机构证书时，需要进入，设置-通用-VPN与设备管理，找到蓝信相关证书进行信任操作；
+
+#### 2.2.2. 配置
+
+- 略；
+
+#### 2.2.3. 使用
+
+- 建议日常办公，面向公司内部沟通交流时，使用蓝信桌面版和移动版客户端软件；
+
+## 3. vpn软件
+
+### 3.1. 天融信VPN
+
+#### 3.1.1. 安装
+
+- [官网地址](https://app.topsec.com.cn/ng.html)；
+
+#### 3.1.2. 配置
 
 - 网关地址：210.12.131.84:20443；
 - 用户名：中文全名；
 - 密码；
 - 若以上配置正确，仍提示错误，需要手动更新最新版客户端；
 
-#### 2.1.3. 使用
+#### 3.1.3. 使用
 
 - 打开软件登录即可；
-- 若遇到访问的内网地址无法访问，则需要在OA系统上申请网段访问权限，OA系统个人门户/流程/新建流程/IT管理/IT应用系统申请流程；
+- 若遇到访问的内网地址无法访问，则需要在OA系统上申请网段访问权限，OA系统个人门户-流程-新建流程-IT管理-IT应用系统申请流程；
 - 网段举例：
 
 | 功能               | 网段         |
@@ -38,15 +81,16 @@
 | 公共研发组         | 192.168.10.* |
 | 华弘数据组生产环境 | 10.1.13.*    |
 
-## 3. 浏览器
+## 4. 浏览器
 
+- 建议使用账号密码登录浏览器，以便同步使用习惯；
 - 推荐使用edge浏览器，使用bing作为默认搜索引擎；
 - 推荐插件：
   - ublock origin，广告拦截；
   - 百度药丸，若使用百度搜索引擎；
   - 笔记类裁剪工具，例如印象笔记、有道云笔记等；
 
-## 4. 终端软件
+## 5. 终端软件
 
 - 微软商店：windows terminal；
 - git-bash，可提供类似linux的操作指令，例如ssh-copy-id、mkdir等；
