--- a/入职/培训计划/基础知识/通用软件.md
+++ b/入职/培训计划/基础知识/通用软件.md
@@ -17,12 +17,12 @@
 
 #### 2.1.1. 安装
 
-1. 登录OA系统后，界面右上角的M图标为移动版OA软件，e图标为桌面版OA软件；
+1. 登录[OA办公系统](http://oa100.bhz.com.cn/)后，界面右上角的M图标为移动版OA软件，e图标为桌面版OA软件；
 2. 根据界面提示，下载所需版本；
 
 #### 2.1.2. 配置
 
-- 系统地址：<http://oa100.bhz.com.cn:89>；
+- 服务器：<http://oa100.bhz.com.cn:89>；
 - 移动版，可能需要进行隐私授权；
 
 #### 2.1.3. 使用
