--- a/入职/培训计划/基础知识/通用软件.md
+++ b/入职/培训计划/基础知识/通用软件.md
@@ -22,12 +22,14 @@
 
 #### 2.1.2. 配置
 
-- 服务器：<http://oa100.bhz.com.cn:89>；
+- 登录界面：
+  - 服务器：`http://oa100.bhz.com.cn:89`；
+  - 账号密码： 使用OA办公系统相同的账号密码；
 - 移动版，可能需要进行隐私授权；
 
 #### 2.1.3. 使用
 
-- 使用OA办公系统相同的账号密码登录即可；
+- 移动版OA系统功能，创建流程、会议等；
 
 ### 2.2. 蓝信
 
